# 6sem2025Backend

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  importer.Dockerfile  postgres  pyproject.toml  requirements.txt  schema.sql  sql-server.docker-compose.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml  dev-to-main.yaml
nodesk/: __init__.py
nodesk/authentication/: hashers.py  protocols.py  routers.py  schemas.py  services.py  tokens.py
nodesk/core/: di.py  settings.py
nodesk/core/database/: metadata.py  protocols.py  session.py
nodesk/core/database/migrations/: env.py
nodesk/core/database/migrations/versions/: 16c6a066ae09_cripto_tabela.py  1f28c8673862_update_termos.py  3e545bccb0fb_add_role_column.py  487661798840_termsofuse_expired_at.py  4d211e9ded85_.py  7db4deb60915_expired_at_in_termsofuse.py  8e7c41652aee_terms_of_use.py  93ed4f6dc5c8_feat_add_roles_table_user_role_id_fk_.py  9fdab0d4b911_.py
nodesk/core/settings/: __init__.py  admin.py  application.py  base.py  database.py  mongo.py  sqlalchemy.py
nodesk/dashboard/: routers.py  schemas.py
nodesk/etl/: databases.py
nodesk/etl/pipelines/: companies.py  critical_projects.py  evolution_chart.py  expired_tickets.py  expired_tickets_list.py  run_all_pipelines.py
nodesk/forecasting/: routers.py  schemas.py
nodesk/kpi/: routers.py  schemas.py
nodesk/kpi/model/: weekly_tickets_model.json
nodesk/kpi/model/legacy/: weekly_tickets_model.json
nodesk/scripts/: backup_cron.sh  restore.sh
nodesk/terms/: routers.py  schemas.py
nodesk/users/: models.py  protocols.py  routers.py  schemas.py  service.py  service_encrypt.py
scripts/: .pre-commit-config.yaml.old  validate_commit_msg.sh.old
tests/: conftest.py  test_app.py  test_dashboard.py  test_users.py
