[project]
name = "nodesk"
version = "0.0.0"
description = ""
authors = [{ name = "Jhonny Freitas Dutra", email = "dutrajy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pyodbc (>=5.1.0,<6.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "prophet (>=1.1.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "asgi-lifespan (>=2.1.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "sqlalchemy[mypy] (>=2.0.43,<3.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.mypy]
python_version = "3.13"
plugins = ['pydantic.mypy', 'sqlalchemy.ext.mypy.plugin']

[tool.pytest.ini_options]
addopts = "--cov=nodesk --cov-report=term --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.alembic]
script_location = "nodesk/core/database/migrations"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "exec"
executable = "ruff"
options = "format REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_fix"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"
